# owlivion-mail

./: .env.example  .gitignore  .progress-stats.json  .tracking-guide.md  BUILD.md  BUILD_SUCCESS.md  CHANGELOG.md  CLAUDE.md  CSP_CHANGES.md  EXECUTIVE_SUMMARY.md  FINAL_RELEASE.md  GOOGLE_DOMAIN_VERIFICATION.md  GOOGLE_OAUTH_QUICKSTART.md  GOOGLE_OAUTH_SETUP.md  GPU_FIX.md  INSTALL_TEST.sh  LINUX_BUILD_SUMMARY.md  LINUX_INSTALL.md  OAUTH_SETUP.md  QUICK_FIX_SCRIPT.sh  README.md  RELEASE_CHECKLIST.md  REVOKED_CREDENTIALS.md  SECURITY_DASHBOARD.md  SECURITY_DEPENDENCY_UPDATE.md  SECURITY_FIXES_COMPLETE.md  SECURITY_IMPLEMENTATION.md  SECURITY_PENTEST_REPORT.md  SECURITY_SUMMARY_TABLE.md  SECURITY_TESTING.md  TEST_RESULTS.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test-sounds.html  todo.md  update_deps.sh
.claude/: plan.md
.githooks/: post-commit  pre-commit
.github/workflows/: ci.yml  release.yml
docs/: ACCOUNT_SYNC_ARCHITECTURE.md  OPERATIONS_RUNBOOK.md  PRODUCTION_DEPLOYMENT.md  TROUBLESHOOTING.md  USER_MIGRATION_GUIDE.md
landing/: TODO.md
owlivion-sync-server/: .env.example  .gitignore  DELTA_SYNC_IMPLEMENTATION.md  README.md  docker-compose.monitoring.yml  package.json  schema.sql
owlivion-sync-server/deployment/: EXTERNAL-MONITORING-GUIDE.md  FIREWALL-CHECKLIST.md  MONITORING-SETUP.md  MONITORING_README.md  PRODUCTION_MONITORING_FINAL.md  README.md  SSL-CHECKLIST.md  SSL-SETUP.md  TASK-2-COMPLETE-SUMMARY.md  TASK-2-SUMMARY.md  TASK-3-SUMMARY.md  TASK-4-SUMMARY.md  backup.sh  deploy.sh  ecosystem.config.js  healthcheck.sh  nginx.conf  owlivion-pm2-logrotate  setup-database.sh  setup-firewall.sh  setup-monitoring.sh  setup-ssl.sh
owlivion-sync-server/deployment/optional/pm2-plus/: PHASE-4-PM2-PLUS-COMPLETE.md  PM2_PLUS_DEPLOYMENT.md  PM2_PLUS_SETUP.md  pm2-plus-quickstart.md  setup-pm2-plus.sh
owlivion-sync-server/docs/: DELTA_SYNC_API.md  SCALING_GUIDE.md  SCALING_QUICKSTART.md
owlivion-sync-server/monitoring/: alertmanager.yml  prometheus.yml
owlivion-sync-server/monitoring/alerts/: sync-server-alerts.yml
owlivion-sync-server/monitoring/grafana-dashboards/: README.md
owlivion-sync-server/scripts/: security-check.sh  setup-haproxy.sh  setup-monitoring.sh  test-security-headers.js
owlivion-sync-server/src/: index.js
owlivion-sync-server/src/config/: database.js  jwt.js
owlivion-sync-server/src/db/: schema.sql
owlivion-sync-server/src/db/migrations/: 002_delta_sync.sql  003_add_2fa.sql  004_session_monitoring.sql  run-migration.sh
owlivion-sync-server/src/middleware/: auth.js  errorHandler.js
owlivion-sync-server/src/routes/: audit.js  auth-2fa-remaining.js  auth.js  delta-sync.js  devices.js  sessions.js  sync.js
owlivion-sync-server/src/utils/: metrics.js  rateLimiter.js  sessionMonitoring.js  twoFactor.js  validator.js
owlivion-sync-server/tests/: README.md  auth.test.js  delta-sync.test.js  devices.test.js  integration.test.js  production-tests.md  setup.js  sync.test.js
owlivion-sync-server/tests/scripts/: production-test-suite.sh
public/sounds/: README.md
scripts/: README.md  build-linux.sh  check-build-deps.sh  setup-google-oauth.sh  setup-oauth.sh  test-coverage.sh  track-progress.sh  update-todo-stats.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  owlivion-mail.desktop  tauri.conf.json
src-tauri/deb-scripts/: postinst  postrm  prerm
src-tauri/examples/: test_autoconfig.rs
src-tauri/icons-backup/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  oauth.rs  tray.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/db/migrations/: 001_delta_sync.sql  006_add_priority_settings.sql  007_add_email_templates.sql  008_add_account_priority_settings.sql
src-tauri/src/filters/: actions.rs  conditions.rs  engine.rs  mod.rs
src-tauri/src/mail/: async_imap.rs  autoconfig.rs  config.rs  imap.rs  mod.rs  smtp_oauth.rs
src-tauri/src/sync/: api.rs  crypto.rs  history.rs  manager.rs  mod.rs  models.rs  queue.rs  scheduler.rs  tests.rs  tests_delta_compression.rs
src-tauri/tests/: README.md
src/components/: AIReplyModal.tsx  Compose.tsx  SearchFilters.tsx  ShortcutsHelp.tsx  Welcome.tsx  index.ts
src/components/auth/: SecurityAlertModal.tsx  TwoFactorModal.tsx
src/components/compose/: AttachmentList.tsx  RecipientInput.tsx  RichTextEditor.tsx  TemplateSelector.tsx  index.ts
src/components/debug/: AutoconfigDebug.tsx
src/components/filters/: FilterForm.tsx  FilterList.tsx  FilterTestModal.tsx
src/components/settings/: AISettings.tsx  AccountSettings.tsx  ActiveSessions.tsx  AddAccountModal.tsx  AuditLogViewer.tsx  AuditStats.tsx  ConflictResolutionModal.tsx  DeviceManagerModal.tsx  FilterSettings.tsx  GeneralSettings.tsx  ManualSyncModal.tsx  OwlivionAccountModal.tsx  ShortcutsSettings.tsx  SignatureSettings.tsx  SyncHistoryModal.tsx  SyncSettings.tsx  TemplateSettings.tsx  TwoFactorSettings.tsx  index.ts
src/components/templates/: TemplateForm.tsx  TemplateList.tsx
src/constants/: shortcuts.ts
src/hooks/: index.ts  useDraftAutoSave.ts  useKeyboardShortcuts.ts  useSync.ts
src/pages/: Filters.tsx  Settings.tsx
src/services/: draftService.ts  filterService.ts  filterTemplates.ts  geminiService.ts  index.ts  mailService.ts  syncService.ts  templateService.ts
src/types/: index.ts
src/utils/: notificationSounds.ts  templateVariables.ts
