[package]
name = "owlivion-mail"
version = "0.1.0"
description = "Owlivion Mail - Modern Email Client"
authors = ["Berkan Cetinel <babafpv@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "owlivion_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Mail dependencies
imap = "2.4"
native-tls = "0.2"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
mail-parser = "0.9"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
quick-xml = "0.31"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Additional utilities
thiserror = "1.0"
regex-lite = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
mime = "0.3"
directories = "5.0"

