[package]
name = "owlivion-mail"
version = "1.0.0"
description = "Owlivion Mail - Modern Email Client"
authors = ["Berkan Cetinel <babafpv@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "owlivion_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Mail dependencies
imap = "2.4"
async-imap = "0.11.1"
async-native-tls = "0.5"
native-tls = "0.2"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
mail-parser = "0.9"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
url = "2.5"
quick-xml = "0.31"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Additional utilities
thiserror = "1.0"
regex-lite = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
mime = "0.3"
directories = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }

# DNS resolver for MX lookup
hickory-resolver = "0.24"

# Crypto for password encryption
ring = "0.17"
hostname = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
lazy_static = "1.4"
hex = "0.4"
sha2 = "0.10"

# OAuth2 authentication
oauth2 = "4.4"
tiny_http = "0.12"
open = "5.0"
urlencoding = "2.1"

# Test dependencies
[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
